<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityDunkirk">

    <TextView
        android:id="@+id/musicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:text="@string/themeText"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/playMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/musicText"
        android:layout_below="@+id/musicText"
        android:onClick="toPlay"
        android:text="@string/playText" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/musicText"
        android:layout_marginTop="105dp"
        android:text="@string/rateText"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:onClick="toRate" />

    <TextView
        android:id="@+id/readMoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/musicText"
        android:layout_marginBottom="204dp"
        android:onClick="showWebpage"
        android:text="@string/readMoreText"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/readMoreText"
        android:layout_marginTop="315dp">

    </WebView>

    <Button
        android:id="@+id/submitRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:onClick="toRate"
        android:text="@string/submitText" />

    <Button
        android:id="@+id/pausaeMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/musicText"
        android:layout_below="@+id/musicText"
        android:onClick="toPause"
        android:text="@string/pauseText" />


</RelativeLayout>